Add inventory events table & logic