@@ -1,15 +1,17 @@
 package com.coding.saga.inventory;
 
+import com.coding.saga.inventory.entity.Event;
+import com.coding.saga.inventory.entity.EventFactory;
 import com.coding.saga.inventory.entity.Item;
+import com.coding.saga.inventory.repository.EventRepository;
 import com.coding.saga.inventory.repository.ItemRepository;
+import com.coding.saga.inventory.util.CsvUtil;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 
 import javax.transaction.Transactional;
 import java.io.InputStream;
 import java.util.List;
-
-import static java.util.stream.Collectors.toList;
 
 /**
  * @author <a href="kuldeepyadav7291@gmail.com">Kuldeep</a>
@@ -19,19 +21,42 @@ import static java.util.stream.Collectors.toList;
 @RequiredArgsConstructor
 public class ItemService {
     private final ItemRepository repo;
+    private final EventRepository eventRepo;
 
     public void bulkAdd(InputStream is) {
 
         List<ItemDto> itemDataList = CsvUtil.readCsv(is);
 
-        List<Item> items = itemDataList.stream().map(this::create).collect(toList());
+        List<Item> items = itemDataList.stream().map(this::create).toList();
 
-        repo.saveAll(items);
+        items = repo.saveAll(items);
+
+        eventRepo.saveAll(items.stream().map(this::createAddEvent).toList());
     }
 
     private Item create(ItemDto data) {
         Item item = Item.of(data.sku(), data.name(), data.price());
         item.setQuantity(data.initialQty());
         return item;
+    }
+
+    private Event createAddEvent(Item item) {
+        ItemPayload payload = transform(item);
+        return EventFactory.create(
+                item.getId().toString(),
+                "Item",
+                EventType.ITEM_ADDED,
+                payload
+        );
+    }
+
+    private ItemPayload transform(Item item) {
+        return new ItemPayload(
+                item.getId(),
+                item.getSku(),
+                item.getName(),
+                item.getInventory().getFreeQty(),
+                item.getPrice()
+        );
     }
 }
